# muninn

./: .dockerignore  .gitignore  .mcp.json  CLAUDE.md  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
.claude/: launch.json
.claude/hooks/: post-commit-muninn.sh
.claude/memory/: session-end.json
.github/workflows/: ci.yml  publish.yml
docs/: PRD.md  audit-plan.md  audit-results.md  dashboard-plan.md  muninn-auto-save-spec.md  project-review-2026-02-25.md  publishing.md  remote-setup.md  turso-perf-plan.md
scripts/: migrate_hierarchy.py
src/muninn/: api.py  auth.py  embedder.py  formatter.py  github_sync.py  models.py  oauth_login.py  oauth_provider.py  server.py  store.py  tools.py
tests/: conftest.py  test_api.py  test_auth.py  test_embedder.py  test_github_sync.py  test_hierarchy.py  test_memory_quality.py  test_oauth.py  test_oauth_integration.py  test_semantic_search.py  test_server.py  test_store.py  test_tools.py
web/: package-lock.json  package.json
web/.claude/memory/: session-end.json
web/src/: middleware.ts
web/src/app/: globals.css  layout.tsx  page.tsx  providers.tsx
web/src/app/instructions/: page.tsx
web/src/app/search/: page.tsx
web/src/app/settings/: page.tsx
web/src/components/icons/: raven-icon.tsx
web/src/components/layout/: command-palette.tsx  sidebar.tsx
web/src/components/muninn/: create-project-dialog.tsx  depth-badge.tsx  (+15 more)
web/src/hooks/: use-toast.ts
web/src/lib/: api-client.ts  api.ts  constants.ts  db.ts  diff.ts  store.ts  toast-context.tsx  types.ts  use-project-memories.ts  utils.ts
(+18 files in other folders)
